# LivineAPI

./: .env  .gitignore  data.json  db.sqlite3  db2.sqlite3  pyproject.toml  requirements.txt
api/: admin.py  compress_image.py  models.py  serializers.py  translation.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_patient_image.py  0002_patient_recipe_delete_breakfastmodel_and_more.py  0003_delete_userprofile.py  0003_difficulty_image.py  0004_recipe_isvegetarian.py
livineBackend/: settings.py  urls.py
locale/ar/LC_MESSAGES/: django.mo  django.po
staticfiles/: staticfiles.json
users/: admin.py  models.py  serailizers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_userprofile_user.py  0002_userprofile_points.py  0003_alter_userprofile_points.py  0003_userprofile_user.py  0004_userprofile_favorites.py
